# CableTester

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: CONTRIBUTING.md  build_instructions.md  development.md
source/faebryk/: cable_tester.py  main.py
source/kicad/libs/3dmodels/lcsc.3dshapes/: USB-C-SMD_TYPE-C-USB-18.wrl  USB-C-SMD_TYPEC-324G-BCP24.wrl
source/kicad/libs/footprints/: faebryk_logo.kicad_mod
source/kicad/libs/footprints/lcsc.pretty/: LED0805-R-RD.kicad_mod  R0402.kicad_mod  RJ45-TH_B-1-1.kicad_mod  SOT-23-3_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod  SOT-23_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod  USB-C-SMD_TYPE-C-USB-18.kicad_mod  USB-C-SMD_TYPEC-324G-BCP24.kicad_mod
source/kicad/main/: fp-lib-table  main.kicad_dru  main.kicad_pcb  main.kicad_prl  main.kicad_pro  main.net
src/cabletester/: cable_tester.py  main.py  pcb.py  picker.py  util.py
src/kicad/libs/3dmodels/lcsc.3dshapes/: LED0805-RD.wrl  R0402_L1.0-W0.5-H0.5.wrl  RJ45-TH_B-1-1.wrl
src/kicad/libs/footprints/: faebryk_logo.kicad_mod
src/kicad/libs/footprints/lcsc.pretty/: R0402.kicad_mod  SOT-23-3_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod  USB-C-SMD_TYPE-C-USB-18.kicad_mod
src/kicad/main/: fp-lib-table  main.kicad_pcb  main.kicad_prl  main.net
